--- a/css/accordion.css
+++ b/css/accordion.css
@@ -32,6 +32,12 @@ body {
 	-webkit-box-sizing:border-box; 
 	-moz-box-sizing:border-box; 
 	box-sizing:border-box;
+	border-style: solid;
+    border-width: 0.5px;
+    border-top-style: none;
+    border-right-style: none;
+    border-bottom-style: solid;
+    border-left-style: none;
 }
 
 .accordion {
@@ -46,8 +52,7 @@ body {
 	width:100%;
 	padding:15px;
 	display:inline-block;
-	border-bottom:1px solid #1a1a1a;
-	background:#333;
+	background:#000;
 	transition:all linear 0.15s;
 	/* Type */
 	font-size:1.200em;
@@ -56,7 +61,7 @@ body {
 }
 
 .accordion-section-title.active, .accordion-section-title:hover {
-	background:#4c4c4c;
+	background:#1f1e1e;
 	/* Type */
 	text-decoration:none;
 }
