--- a/css/grayscale-custom.css
+++ b/css/grayscale-custom.css
@@ -16,13 +16,26 @@
 	    margin-right: auto!important;
 	    font-family: Cabin,'Helvetica Neue',Helvetica,Arial,sans-serif;
 	    font-weight: 300;
-	    margin: 0 0 35px;
+	    margin: 0 0 250px;
 	    letter-spacing: 1px;
 	    text-transform: uppercase;
 	}
 
 	.masthead .intro-body .brand-heading {
 	    font-size: 65px;
+	}
+
+	#mainNav .navbar-brand {
+    font-weight: 700;
+    font-size: 16px;
+	}
+
+	.navbar-expand-lg .navbar-collapse {
+    display: -ms-flexbox!important;
+    display: flex!important;
+    -ms-flex-preferred-size: auto;
+    flex-basis: auto;
+    font-size: 14px;
 	}
 
 }
@@ -41,7 +54,7 @@
 	    margin-right: auto!important;
 	    font-family: Cabin,'Helvetica Neue',Helvetica,Arial,sans-serif;
 	    font-weight: 700;
-	    margin: 0 0 35px;
+	    margin: 0 0 400px;
 	    letter-spacing: 1px;
 	    text-transform: uppercase;
 	}
