small updates, added all categories into menu

--- a/css/grayscale-custom.css
+++ b/css/grayscale-custom.css
@@ -2,6 +2,21 @@
 -------- Overide Grayscale
 \*------------------------------------*/
 
+body {
+    font-family: Cabin,'Helvetica Neue',Helvetica,Arial,sans-serif;
+    position: relative;
+    font-size: 14px;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    background-color: #000;
+}
+
+h5 {
+	color: #1d9b6c;
+}
+
+
 @media (min-width: 1200px){
 	.masthead .intro-body {
 	    display: table-cell;
@@ -10,7 +25,7 @@
 	}
 
 	.masthead .intro-body .intro-text {
-	    font-size: 16px;
+	    font-size: 14px;
 	    max-width: 600px;
 	    margin-left: auto!important;
 	    margin-right: auto!important;
@@ -26,16 +41,20 @@
 	}
 
 	#mainNav .navbar-brand {
-    font-weight: 700;
-    font-size: 16px;
+	    font-weight: bold;
+	    font-size: 16px;
 	}
 
 	.navbar-expand-lg .navbar-collapse {
-    display: -ms-flexbox!important;
-    display: flex!important;
-    -ms-flex-preferred-size: auto;
-    flex-basis: auto;
-    font-size: 14px;
+	    display: -ms-flexbox!important;
+	    display: flex!important;
+	    -ms-flex-preferred-size: auto;
+	    flex-basis: auto;
+	    font-size: 13px;
+	}
+
+	p {
+	    font-size: 15px;
 	}
 
 }
@@ -62,7 +81,20 @@
 	.masthead .intro-body .brand-heading {
 	    font-size: 90px;
 	}
+
+	p {
+	    font-size: 17px;
+	}
+
 }
+
+	.navbar-expand-lg .navbar-collapse {
+	    display: -ms-flexbox!important;
+	    display: flex!important;
+	    -ms-flex-preferred-size: auto;
+	    flex-basis: auto;
+	    font-size: 14px;
+	}
 
 a {
     -webkit-transition: all .2s ease-in-out;
@@ -71,12 +103,22 @@ a {
     /*color: #42dca3;*/
 }
 
+p {
+    font-weight: lighter;
+    margin: 0 0 35px;
+    font-family: Verdana;
+}
+
 .accordion-section a:focus, a:hover {
     text-decoration: none;
     color: #fff;
 }
 
 .content-section {
-    padding-top: 150px; 
-    padding-bottom: 200px; 
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.download-section {
+    background-color: #272727;
 }
