--- a/css/grayscale-custom.css
+++ b/css/grayscale-custom.css
@@ -88,13 +88,13 @@ h5 {
 
 }
 
-	.navbar-expand-lg .navbar-collapse {
+/*	.navbar-expand-lg .navbar-collapse {
 	    display: -ms-flexbox!important;
 	    display: flex!important;
 	    -ms-flex-preferred-size: auto;
 	    flex-basis: auto;
 	    font-size: 14px;
-	}
+	}*/
 
 a {
     -webkit-transition: all .2s ease-in-out;
@@ -105,7 +105,7 @@ a {
 
 p {
     font-weight: lighter;
-    margin: 0 0 35px;
+    margin: 0 0 0px;
     font-family: Verdana;
 }
 
@@ -120,5 +120,6 @@ p {
 }
 
 .download-section {
-    background-color: #272727;
+    background-color: #446d5f;
+    background-attachment: fixed;
 }
