--- a/css/grayscale-custom.css
+++ b/css/grayscale-custom.css
@@ -123,3 +123,12 @@ p {
     background-color: #446d5f;
     background-attachment: fixed;
 }
+
+.gallery img {
+	padding-right: 10px;
+	margin-left: 30px;
+	margin-bottom:20px;
+}
+footer {
+    padding: 20px 0;
+}
