some more work for gallery

--- a/css/flexslider-rtl.css
+++ b/css/flexslider-rtl.css
@@ -21,7 +21,7 @@
  * BASE STYLES
  * ====================================================================================================================*/
 .flexslider {
-	direction:rtl;
+	margin: auto;
 }
 /* ====================================================================================================================
  * DEFAULT THEME
@@ -65,6 +65,10 @@
 
 .flex-control-thumbs li {
   float: right;
+}
+
+#f2{
+  margin-top: 50px;
 }
 
 /* ====================================================================================================================
