--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -76,8 +76,8 @@ html[xmlns] .flexslider .slides {
   background: red;
  }
 .flexslider {
-  width: 1000px;
-  height: 700px;
+  width: 55%;
+  height: 597px;
   margin: 0 0 60px;
   background: #fff;
   border: 4px solid #fff;
@@ -94,9 +94,17 @@ html[xmlns] .flexslider .slides {
 .flexslider .slides {
   zoom: 1;
 }
+#f2{
+  width: 100%;
+  height: 1%;
+}
+#f2 img{
+  height: 1%;
+}
+
 .flexslider .slides img {
-    width: 1000px;
-  height: 700px;
+  width: 100%;
+  height: 600px;
   -moz-user-select: none;
 }
 .flex-viewport {
@@ -118,8 +126,8 @@ html[xmlns] .flexslider .slides {
 .flex-direction-nav a {
   text-decoration: none;
   display: block;
-  width: 40px;
-  height: 40px;
+  width: 80px;
+  height: 80px;
   margin: -20px 0 0;
   position: absolute;
   top: 50%;
@@ -127,8 +135,6 @@ html[xmlns] .flexslider .slides {
   overflow: hidden;
   opacity: 0;
   cursor: pointer;
-  color: rgba(0, 0, 0, 0.8);
-  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
@@ -137,11 +143,11 @@ html[xmlns] .flexslider .slides {
 }
 .flex-direction-nav a:before {
   font-family: "flexslider-icon";
+  transform: rotate(180deg);
   font-size: 40px;
   display: inline-block;
   content: '\f001';
-  color: rgba(0, 0, 0, 0.8);
-  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
+  color: #1d9b6c;
 }
 .flex-direction-nav a.flex-next:before {
   content: '\f002';
@@ -207,7 +213,7 @@ html[xmlns] .flexslider .slides {
 .flex-control-nav li {
   margin: 0 6px;
   display: inline-block;
-  zoom: 1;
+  zoom: 0.5;
   *display: inline;
 }
 .flex-control-paging li a {
@@ -217,7 +223,7 @@ html[xmlns] .flexslider .slides {
   background: #666;
   background: rgba(0, 0, 0, 0.5);
   cursor: pointer;
-  /*text-indent: -9999px;*/
+  text-indent: -9999px;
   -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
   -o-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
