hide the main carousel for phones

--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -72,9 +72,6 @@ html[xmlns] .flexslider .slides {
 /* ====================================================================================================================
  * DEFAULT THEME
  * ====================================================================================================================*/
- .flex-caption p {
-  background: red;
- }
 .flexslider {
   width: 55%;
   height: 597px;
@@ -283,4 +280,7 @@ html[xmlns] .flexslider .slides {
     opacity: 1;
     right: 10px;
   }
+  #f1{
+  display: none;
+  } 
 }
