--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -268,6 +268,19 @@ html[xmlns] .flexslider .slides {
   opacity: 1;
   cursor: default;
 }
+.flex-caption {
+        width: 100%;
+        padding: 2%;
+        left: 0;
+        bottom: 0;
+        color: #fff;
+        font-size: 18px;
+        line-height: 18px;
+        margin-top: -66px;
+}
+li.css a {
+        border-radius: 0;
+}
 /* ====================================================================================================================
  * RESPONSIVE
  * ====================================================================================================================*/
